# Crew_AI_Project

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/study_helper_by_ai_orchest/: crew.py  main.py
src/study_helper_by_ai_orchest/config/: agents.yaml  tasks.yaml
