[project]
name = "study_helper_by_ai_orchest"
version = "0.1.0"
description = "Study_Helper_by_AI_Orchest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.2,<2.0.0"
]

[project.scripts]
study_helper_by_ai_orchest = "study_helper_by_ai_orchest.main:run"
run_crew = "study_helper_by_ai_orchest.main:run"
train = "study_helper_by_ai_orchest.main:train"
replay = "study_helper_by_ai_orchest.main:replay"
test = "study_helper_by_ai_orchest.main:test"
run_with_trigger = "study_helper_by_ai_orchest.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
